# streaming-canvas-search-ltr

./: .dockerignore  .gitignore  DEFINITIVE_NUMBERS.md  LICENSE  MLOPS.md  MODEL_CARD.md  Makefile  README.md  README_INTERACTIVE.html  TECHNICAL_WRITEUP.md  als_collaborative_filtering.py  calibrated_ltr_scores.py  content_clustering.py  cross_encoder_reranker.py  diffusion_pipeline.py  diffusion_posters.py  docker-compose.example.yml  docker-compose.yml.bak.1771040308  docker-compose.yml.bak.20260214-143645  docker-compose.yml.bak.fix.20260214-145850  docker-compose.yml.bak.fix.20260214-150056  dump.rdb  env.example  eval_hyde.py  eval_ragas.py  faster_whisper_edge.py  fine_tune_retrieval.py  fix_html_and_push.sh  flux_poster.py  gitignore  locustfile.py  mmr_diversity_reranking.py  ner_query_understanding.py  poster_generator.py  project_description.md  pyproject.toml  queries.sql  query_expansion.py  run_all_improvements.sh  schema.sql  (+5 more)
config/: app.movielens.yaml  app.nfcorpus.yaml  app.yaml  eval_movielens.yaml
configs/: _eval_autogen.yaml  _train_autogen.yaml  app.yaml  dataset.yaml  eval.yaml  eval_movielens.yaml  gates.yaml  multi_eval.yaml  serve.yaml  train.yaml  train_movielens.yaml
dashboard/: metaflow_dashboard.py
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.dashboard
flows/: multimodal_pipeline_flow.py  phenomenal_foreach_ltr.py  production_flows.py  streaming_search_flow.py  streamlens_airflow_dag.py  streamlens_flow.py  train_ltr.py  train_ltr_production.py
k8s/: api.yaml  hpa.yaml  namespace.yaml  redis.yaml  setup.sh
tests/: conftest.py  (+3 more)
(+6837 files in other folders)
