[project]
name = "streaming-canvas-search-ltr"
version = "0.1.0"
description = "Search relevance workbench: BM25 + FAISS + LTR + offline eval + FastAPI service + regression gates"
requires-python = ">=3.11,<3.12"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",

  "numpy>=1.26",
  "pandas>=2.2",

  "rank-bm25>=0.2.2",

  # Dataset
  "beir>=2.0.0",
  "ir-datasets>=0.5.6",

  # Optional retrieval (will be used later; safe to include now)
  "sentence-transformers>=2.6.0",
  "faiss-cpu>=1.8.0",

  # Optional ranker (used in later commits)
  "lightgbm>=4.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]


[dependency-groups]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6.0",
]

